Fix layout issues by adjusting grid margins in configurable bundle product styles

--- a/src/Pyz/Yves/ConfigurableBundleWidget/Theme/default/components/molecules/configured-bundle-product/configured-bundle-product.scss
+++ b/src/Pyz/Yves/ConfigurableBundleWidget/Theme/default/components/molecules/configured-bundle-product/configured-bundle-product.scss
@@ -22,7 +22,6 @@ $cart-item-image-width: 76;
             min-width: 0;
             display: grid;
             grid-template-columns: 1fr;
-            row-gap: var(--scale-12);
 
             @include helper-breakpoint-media-min($lg) {
                 grid-template-columns: 1fr auto;
